--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1> Michelle's page</h1>
 
 
-<p> Yo dis' here Michelle what's the dilly yo? </p>
+<p> Some might not always have the financial means in order to provide themselves with the materials they might need in order to make it in the modeling business </p>
