--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<h1> Michelle's page</h1>
+<h1> Weclome to MYA models</h1>
 
 
 <p> Some might not always have the financial means in order to provide themselves with the materials they might need in order to make it in the modeling business </p>
-<imgsrc="http://data.whicdn.com/images/169897291/large.jpg" >
+<img src="http://data.whicdn.com/images/169897291/large.jpg" >
+  <p> We often have audition dates and meeting where all you would have to bring our the following things.</p>
+  <p> -    
+    
