--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <h1> Weclome to MYA models</h1>
 
-
+<body>
 <p> Some might not always have the financial means in order to provide themselves with the materials they might need in order to make it in the modeling business </p>
 <img src="http://data.whicdn.com/images/169897291/large.jpg" >
   <p> We often have audition dates and meeting where all you would have to bring our the following things.</p>
-  <p> -    
-    
+  <p> - Two photos of you only. Body shot and headshot, doesn't have the be professional can be simply taken by a phone even! </p>
+  <p> -asdfsadfds </p>
+   
+  <a href="http://http://www.onemodelplace.com/">One Model Place</a>
+
+</body>
