--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <p> - Two photos of you only. Body shot and headshot, doesn't have the be professional can be simply taken by a phone even! </p>
   <p> -asdfsadfds </p>
    
-  <a href="http://http://www.onemodelplace.com/"> One Model Place </a>
+  <a href="http://www.onemodelplace.com/"> One Model Place </a>
 
 </body>
