--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <p> -asdfsadfds </p>
    
   <a href="http://www.onemodelplace.com/"> One Model Place </a>
+  <a href="www.onemodelplace.com/"> One Model Place </a>
 
 </body>
