--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <p> We often have audition dates and meeting where all you would have to bring our the following things.</p>
   <p> - Two photos of you only. Body shot and headshot, doesn't have the be professional can be simply taken by a phone even! </p>
   <p> -asdfsadfds </p>
-   
-  <a href="http://www.onemodelplace.com/"> One Model Place </a>
-  <a href="www.onemodelplace.com/"> One Model Place </a>
+   <br>
+  <a href="http://www.onemodelplace.com"> One Model Place </a>
+  <br>
+  <a href="www.onemodelplace.com"> One Model Place </a>
 
 </body>
