--- a/index.html
+++ b/index.html
@@ -12,3 +12,13 @@
   <a href="www.onemodelplace.com"> One Model Place </a>
 
 </body>
+
+
+
+
+
+
+
+
+ <p> You will be able to contact us for anymore information, the contact information will be listed on the page below </p>
+<a herf="https://myamodels.github.io/contacts.html"> contact information </a>
