--- a/index.html
+++ b/index.html
@@ -21,4 +21,4 @@
 
 
  <p> You will be able to contact us for anymore information, the contact information will be listed on the page below </p>
-<a herf="https://myamodels.github.io/contacts.html"> contact information </a>
+<a href="https://myamodels.github.io/contacts.html"> contact information </a>
