--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <img src="http://data.whicdn.com/images/169897291/large.jpg" >
   <p> We often have audition dates and meeting where all you would have to bring our the following things.</p>
   <p> - Two photos of you only. Body shot and headshot, doesn't have the be professional can be simply taken by a phone even! </p>
-  <p> -asdfsadfds </p>
+  <p> - A paragraph explaining why you'd like to join us. </p>
    <br>
   <a href="http://www.onemodelplace.com"> One Model Place </a>
   <br>
-  <a href="www.onemodelplace.com"> One Model Place </a>
+  
 
 </body>
 
