--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,9 @@
 <h1> Here I am going to list my contacts </h1>
+
+
+<p> EMAIL: michellesamarax@gmail.com </p>
+<p> NUMBER: 347-655-7896 </p>
+<p> ALTERNATIVE EMAIL: MYAMODELS@GMAIL.COM </p>
+
+
+
