--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
 
 
-
+<p> More photos of our models below in the link.</p>
 
 
 
  <p> You will be able to contact us for anymore information, the contact information will be listed on the page below </p>
 <a href="https://myamodels.github.io/contacts.html"> contact information </a>
+
+
