--- a/OURMODELS.html
+++ b/OURMODELS.html
@@ -6,4 +6,9 @@
 <img src="https://s-media-cache-ak0.pinimg.com/736x/dc/fa/8b/dcfa8b636fb186f3e5910e5a08eb128a.jpg" style="width:304px;height:228px;">
 
 <img src="https://s-media-cache-ak0.pinimg.com/736x/eb/65/cc/eb65cc98159523b1d529195940a4f171.jpg" style="width:304px;height:228px;">
+ 
+<img src="http://s8.favim.com/610/151010/beauty-boho-brows-carefree-Favim.com-3413818.jpg" style="width:304px;height:228;">
 
+<img src="http://s2.favim.com/orig/150914/beauty-classy-fashion-hair-Favim.com-3293742.jpg" style="width:304px;height:228;">
+                                                                                                   
+<img src="http://s1.favim.com/orig/150928/girls-grey-hair-hairstyle-instagram-Favim.com-3371261.jpg" style ="wdith:304px;height:228;">  
