--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1> Weclome to MYA models</h1>
 
+
+<body background="https://s-media-cache-ak0.pinimg.com/736x/6b/eb/6e/6beb6ed18c30dc9a3e913f0d0255f702.jpg" />
 <body>
 <p> Some might not always have the financial means in order to provide themselves with the materials they might need in order to make it in the modeling business </p>
 <img src="http://data.whicdn.com/images/169897291/large.jpg" >
