--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,5 @@
 <h1> Here I am going to list my contacts </h1>
-
+<body background= "http://s12.favim.com/orig/160406/icons-girls-cute-site-model-ig-Favim.com-4175872.jpeg" />
 
 <p> EMAIL: michellex@gmail.com </p>
 <p> NUMBER: 347-655-7896 </p>
