--- a/contacts.html
+++ b/contacts.html
@@ -1,9 +1,9 @@
-<h1> Here I am going to list my contacts </h1>
+<h1> <font color="white" Here I am going to list my contacts </font> </h1>
 <body background= "http://s12.favim.com/orig/160406/icons-girls-cute-site-model-ig-Favim.com-4175872.jpeg" />
 
-<p> EMAIL: michellex@gmail.com </p>
-<p> NUMBER: 347-655-7896 </p>
-<p> ALTERNATIVE EMAIL: MYAMODELS@GMAIL.COM </p>
+<p> <font color="white" EMAIL: michellex@gmail.com </font> </p>
+<p> <font color="white" NUMBER: 347-655-7896 </font> </p>
+<p> <font color="white" ALTERNATIVE EMAIL: MYAMODELS@GMAIL.COM </font> </p>
 
 
 
