--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <p> <font size="7" color= "white"> Some might not always have the financial means in order to provide themselves with the materials they might need in order to make it in the modeling business </font> </p>
 <img src="http://data.whicdn.com/images/169897291/large.jpg" >
-  <p> <font size="7" color= "white"> - We often have audition dates and meeting where all you would have to bring our the following things. </font> </p>
+  <p> <font size="7" color= "white"> - We often have audition dates and meeting where all you would have to bring are the following things. </font> </p>
   <p> <font size="7" color= "white"> - Two photos of you only. Body shot and headshot, doesn't have the be professional can be simply taken by a phone even! </font> </p>
   <p> <font size="7" color= "white"> - A paragraph explaining why you'd like to join us. </font> </p>
    <br>
