--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1> <font size="9" color= "white"> Weclome to MYA models </font> </h1>
 
 
-<body "http://data.whicdn.com/images/191306573/superthumb.jpg"/>
+<body background="http://data.whicdn.com/images/191306573/superthumb.jpg"/>
 <body>
 <p> <font size="7" color= "white"> Some might not always have the financial means in order to provide themselves with the materials they might need in order to make it in the modeling business </font> </p>
 <img src="http://data.whicdn.com/images/169897291/large.jpg" >
