--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <h1> <font size="9" color= "white"> Weclome to MYA models </font> </h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Font Awesome Icons</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+</head>
+<body>
 < i class="fa fa- heart" style="font-size:60px;color:white;"></i>
 
 
