--- a/OURMODELS.html
+++ b/OURMODELS.html
@@ -1,4 +1,9 @@
 <h1> Our Models </h1>
+<ul>
+  <li><a href="https://myamodels.github.io/">Home</a></li>
+  <li><a href="https://myamodels.github.io/contacts.html">contacts</a></li>
+ 
+</ul>
 
 <body background="http://www.color-hex.com/palettes/1836.png" />
 
