--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,10 @@
 <h1> <font color="white"> Here I am going to list my contacts </font> </h1>
 <body background= "http://s12.favim.com/orig/160406/icons-girls-cute-site-model-ig-Favim.com-4175872.jpeg" />
+<u1> 
+  <li><a href="https://myamodels.github.io/">Home</a></li>
+   <li><a href="https://myamodels.github.io/myamodels.github.io/OURMODELS.html/">Our Models</a></li>
+  
+</u1>
 
 <p> <font color="white"> EMAIL: michellex@gmail.com </font> </p>
 <p> <font color="white"> NUMBER: 347-655-7896 </font> </p>
