--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <body background= "http://s12.favim.com/orig/160406/icons-girls-cute-site-model-ig-Favim.com-4175872.jpeg" />
 <u1> 
   <li><a href="https://myamodels.github.io/">Home</a></li>
-   <li><a href="https://myamodels.github.io/myamodels.github.io/OURMODELS.html/">Our Models</a></li>
+   <li><a href="https://myamodels.github.io/myamodels.github.io/OURMODELS.html">Our Models</a></li>
   
 </u1>
 
