--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,39 @@
 <h1> <font color="white"> Here I am going to list my contacts </font> </h1>
 <body background= "http://s12.favim.com/orig/160406/icons-girls-cute-site-model-ig-Favim.com-4175872.jpeg" />
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+#myDIV {
+    width: 300px;
+    height: 200px;
+    border: 15px solid coral;
+    -webkit-animation: mymove 5s infinite; /* Chrome, Safari, Opera */
+    animation: mymove 5s infinite;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes mymove {
+    50% {border-color: lightblue;}
+}
+
+/* Standard syntax */
+@keyframes mymove {
+    50% {border-color: lightblue;}
+}
+</style>
+</head>
+<body>
+
+<p>Gradually change the border-color property from coral to lightblue then back:<p>
+<div id="myDIV"></div>
+
+<p>The border-color is <em>animatable</em> in CSS.</p>
+<p><b>Note:</b> CSS Animations do not work in Internet Explorer 9 and earlier versions.</p>
+
+</body>
+</html>
+
 <u1> 
   <li><a href="https://myamodels.github.io/">Home</a></li>
    <li><a href="https://myamodels.github.io/myamodels.github.io/OURMODELS.html">Our Models</a></li>
