--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/okdJ4EElen0" frameborder="0" allowfullscreen></iframe>
 
-<iframe width="560" height="315" src="http://vizor.io/michellesamarax/happy" framborder="0" allowfullscreen></iframe>
+<script src="http://vizor.io/scripts/embed.js" data-vizorurl="http://vizor.io/embed/michellesamarax/happy" ></script>
 
