--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
 <p> <font size="9" color= "white" > More photos of our models below in the link. </font> </p>
 <a href="myamodels.github.io/OURMODELS.html"> Our models </a>
 
-
+<script src="http://vizor.io/scripts/embed.js" data-vizorurl="http://vizor.io/embed/michellesamarax/happy" ></script>
 
  <p> <font size="9" color= "white" > You will be able to contact us for anymore information, the contact information will be listed on the page below </font> </p>
 <a href="https://myamodels.github.io/contacts.html"> contact information </a>
 
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/okdJ4EElen0" frameborder="0" allowfullscreen></iframe>
-
-<script src="http://vizor.io/scripts/embed.js" data-vizorurl="http://vizor.io/embed/michellesamarax/happy" ></script>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/okdJ4EElen0" frameborder="0" allowfullscreen></iframe
 
